--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,4 +19,5 @@ jobs:
     - name: Publish Documentation
       uses: malept/github-action-gh-pages@debug
       env:
+        GIT_COMMIT_FLAGS: --no-verify
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
